fix header on mobile

--- a/jade/assets/stylesheets/style.css
+++ b/jade/assets/stylesheets/style.css
@@ -79,6 +79,7 @@ header.smaller  .blogtitle {
          /* new blog title size when in small version */
          header.smaller  .blogtitle {
              margin-left: 10px;
+         margin-top: 35px;
                  color: white;
                 text-overflow: ellipsis;
                white-space: nowrap;
